# rzn-browser-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  com.yourcompany.projectagentis.broker.json  setup.sh
example_app/: Cargo.toml
example_app/src/: main.rs
extension/: package-lock.json  package.json
extension/src/: background.js  manifest.json
rzn_broker/: Cargo.toml
rzn_broker/src/: main.rs
