[package]
name = "rzn_broker"
version = "0.1.0"
edition = "2021"

[dependencies]
interprocess = { version = "2.0", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

# Add shared_types later if you create that crate
# shared_types = { path = "../shared_types" }
